ft: vista optimizada de facturas y quitando problemas N+1
